Updated the Zebra Functionality