@@ -32,11 +32,13 @@ echo @echo off > dist\run.bat
 echo echo Starting Mock Server... >> dist\run.bat
 echo start "RFID Mock Server" /MIN cmd /c "node mock-server\tcp_server.js" >> dist\run.bat
 echo timeout /t 2 > nul >> dist\run.bat
-echo start /WAIT "RFID Timing System" java -jar TimingSoft.jar >> dist\run.bat
+echo start /WAIT "RFID Timing System" java --enable-native-access=ALL-UNNAMED -jar TimingSoft.jar >> dist\run.bat
 echo taskkill /FI "WINDOWTITLE eq RFID Mock Server" /T /F >> dist\run.bat
 
 echo Copying run.sh...
+echo Copying run.sh...
 copy run.sh dist\
+copy dist\TimingSoft.jar .
 
 echo.
 echo ==========================================
